third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/transparent-struct-not-error.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error(transparent)]
pub struct Error {
    message: String,
}

fn main() {}
